# git-series

./: Cargo.toml  INTERNALS.md  README.md  git-series.1
contrib/: git-series.bash
src/: main.rs
