[package]
name = "git-series"
version = "0.9.1"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/git-series/git-series"
description = "Track patch series in git"

[dependencies]
ansi_term = "0.9.0"
chrono = "0.2.22"
clap = "2.7.0"
colorparse = "2.0"
git2 = "0.6.6"
isatty = "0.1.1"
munkres = "0.3.0"
quick-error = "1.0"
tempdir = "0.3.4"
